# glia

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  README.ru.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-app.yml
ARCHITECTURE/: index.html
ROADMAP/: index.html
STRATEGY/: index.html
app/: index.html
docs/: ARCHITECTURE.md  ARCHITECTURE.ru.md  ROADMAP.md  STRATEGY.md  app.md  app.ru.md  getting-started.md  getting-started.ru.md  guide.md  guide.ru.md  index.md  index.ru.md
examples/: 01_hello_agent.py  02_tools.py  03_structured_output.py  04_subagents.py  05_checkpoint_resume.py  06_evals.py  07_streaming_and_approval.py  08_ollama_local.py  09_record_replay.py  _common.py
getting-started/: index.html
glia/: __init__.py  agent.py  approval.py  cassette.py  checkpoint.py  errors.py  evals.py  guardrails.py  llm.py  memory.py  structured.py  tools.py  trajectory.py  types.py
glia/integrations/: __init__.py  mcp.py  otel.py
glia/providers/: __init__.py  anthropic.py  echo.py  ollama.py  openai.py
glia/shell/: __init__.py  __main__.py  app.py  backend.py  config.py  server.py
glia/shell/web/: index.html
guide/: index.html
ru/: index.html
ru/ARCHITECTURE/: index.html
ru/ROADMAP/: index.html
ru/STRATEGY/: index.html
ru/app/: index.html
ru/getting-started/: index.html
ru/guide/: index.html
search/: search_index.json
tests/: conftest.py  test_agent.py  test_agent_internals.py  test_approval.py  test_cassette.py  test_claude_adapter.py  test_evals_more.py  test_guardrails_memory.py  test_llm_echo_providers.py  test_mcp.py  test_memory_tools_guardrails_more.py  test_ollama.py  test_openai.py  test_otel.py  test_shell.py  test_streaming_parallel_approval.py  test_structured_evals.py  test_structured_more.py  test_tools.py  test_trajectory_checkpoint.py  test_trajectory_events.py  test_types.py
