[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name on PyPI is "glia-agents" (the bare "glia" was taken);
# the import package is still `import glia`.
name = "glia-agents"
version = "0.7.0"
description = "A glass-box, minimal library for building LLM agents — modern techniques as opt-in primitives, no hidden control flow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Denis Drobyshev" }]
keywords = ["llm", "agents", "ai", "claude", "anthropic", "agent-framework", "tools", "evals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# The core has ZERO required dependencies. That is a feature, not an oversight.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
pydantic = ["pydantic>=2"]
# The desktop shell. The server itself is pure stdlib; pywebview only adds the
# native window (with an automatic browser fallback if it's absent).
shell = ["pywebview>=5"]
mcp = ["mcp>=1.0"]
otel = ["opentelemetry-api>=1.20"]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5", "mypy>=1.8"]
docs = ["mkdocs-material>=9.5", "mkdocs-static-i18n>=1.2"]

[project.scripts]
glia-shell = "glia.shell.app:main"

[project.urls]
Homepage = "https://github.com/DenisDrobyshev/glia"
Repository = "https://github.com/DenisDrobyshev/glia"
Issues = "https://github.com/DenisDrobyshev/glia/issues"

[tool.hatch.build.targets.wheel]
packages = ["glia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = false
ignore_missing_imports = true
